@@ -2,6 +2,12 @@
 \title{NEWS file for the gridSVG package}
 \encoding{UTF-8}
 
+\section{Changes in version 1.7-3}{
+  \itemize{
+    \item Internal implementation change to avoid assigning values
+    into baseenv.
+  }
+}
 \section{Changes in version 1.7-2}{
   \itemize{
     \item Simpler and better transformations for exported
